--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 }
 
 body {
+  background-image: url("./components/images/imgbg.jpg");
   /* background-color: black; */
   color: white;
   font-family: "Roboto", sans-serif;
@@ -15,11 +16,14 @@ body {
   justify-content: center;
   min-height: 100vh;
   padding: 50px;
-
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 
 h1 {
   margin: 2rem;
+  color: black;
+
 }
 
 .board {
@@ -58,12 +62,15 @@ height: 150px;
 }
 
 .info-wrapper {
+  background-color: rgba(206, 197, 79, 0.521);
   display: flex;
   justify-content: space-between;
+  padding: 10px;
 }
 
 h3 {
   padding: 1rem;
+  color: black;
 }
 
 li {
@@ -78,4 +85,10 @@ li {
   cursor: pointer;
   padding: 0.5rem;
   margin: 0.5rem 1rem;
+}
+
+.GameTitle {
+background-color: rgba(206, 197, 79, 0.521);
+text-align: center;
+
 }
