--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
   min-height: 100vh;
   padding: 50px;
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: 300vh 130vh;
 }
 
 h1 {
@@ -40,7 +40,7 @@ h1 {
 }
 
 .squares {
-  background: #4d3f3f;
+  background: #6f4e37;
   border: none;
   font-size: 5rem;
   /* font-weight: 800; */
